Fix 1. removed padding from dashboard 2. changed services to products 3. Design alignment fixes

--- a/src/style/Home/body.scss
+++ b/src/style/Home/body.scss
@@ -44,7 +44,7 @@
     color: var(--descPara-color);
 }
 .vlb {
-    border-left: 3px solid #a97bed;
+    border-left: 1px solid #a97bed;
 }
 .homepage-body-description .btn {
     padding: 8px 24px;
